--- a/config/config_en.yaml
+++ b/config/config_en.yaml
@@ -22,13 +22,13 @@ navbar:
         type: language
 footer:
     top:
-    -   label: Links
-        items:
-        -   label: Build with teedoc
-            url: https://teedoc.neucrack.com
-            target: _blank
-        -   label: Sitemap
-            url: /sitemap.xml
+    # -   label: Links
+    #     items:
+    #     -   label: Build with teedoc
+    #         url: https://teedoc.neucrack.com
+    #         target: _blank
+    #     -   label: Sitemap
+    #         url: /sitemap.xml
     -   label: Source code
         items:
         -   label: github
