--- a/site_config.json
+++ b/site_config.json
@@ -5,7 +5,7 @@
     "site_domain": "vastutils.github.io",
     "site_protocol": "https",
     "config_template_dir": "config",
-    "source": "https://github.com/SakurajimaMaii/vastutils.github.io/blob/main",
+    "source": "https://github.com/SakurajimaMaii/VastDocs/blob/main",
     "route": {
         "docs": {
             "/get_started/zh/": "docs/get_started/zh",
