--- a/site_config.json
+++ b/site_config.json
@@ -11,7 +11,9 @@
             "/get_started/zh/": "docs/get_started/zh",
             "/get_started/en/": "docs/get_started/en",
             "/history/zh/": "docs/history/zh",
-            "/others/zh/": "docs/others/zh"
+            "/history/en/": "docs/history/en",
+            "/others/zh/": "docs/others/zh",
+            "/others/en/": "docs/others/en"
         },
         "pages": {
             "/": "pages/index/zh"
@@ -34,14 +36,14 @@
             ],
             "/history/zh/": [
                 {
-                    "url": "/history/zh/",
-                    "src": "docs/history/zh"
+                    "url": "/history/en/",
+                    "src": "docs/history/en"
                 }
             ],
             "/others/zh/": [
                 {
-                    "url": "/others/zh/",
-                    "src": "docs/others/zh"
+                    "url": "/others/en/",
+                    "src": "docs/others/en"
                 }
             ]
         },
